2.5.7 (11.10.2019):

* Recognise "Document Table" as flatbed for imagescan backend.
* Use option name as label for those options with no title.
* Extended edit profile functionality in scan dialog to frontend options.


2.5.6 (11.09.2019):

* Prevent Negate from changing the alpha channel. 
  Thanks to Chris Mayo for the patch. Closes merge request #25
* Avoid image corruption with colour images when applying WhiteThreshold
  after BlackThreshold.
  Thanks to Chris Mayo for the patch. Closes merge request #26
* Extended edit profile functionality in scan dialog to current scan options,
  when no profile selected. Closes bug #328 (Blue cast to all colour scans)
* Don't try to compress log file if it wasn't created.
* Don't blacklist empty device name
* Improve layout of multiple message dialog. Closes bug #329 (A scanner error
  (ADF jammed) caused GScan2PDF to display an insane dialog box)
* Don't use tiff2pdf to create temporary PDF to check for pdftk.
  Closes bug #330 (Cannot save, pdftk failure to access /tmp)
* Fix --import option. Closes Debian bug #934107
  (Importing with --import=file.pdf does not import anything)
* Fix updating extended page numbering on scan dialog after changing document
* Fix printing. Closes bug #331 (print error suse leap 15.1)
* Set "wait" cursor while scan options are being loaded and "progress" cursor
  while scanning.
* Use gtk-3 cursors for ImageView widget
* Ghost scan button while scan options are being loaded and scanning.
* Fix bug storing responses from multiple message window when no responses had
  been stored before.
* Update to Czech translation (thanks to Pavel Borecki)


2.5.5 (19.07.2019):

* Fix occasional error messages when clearing all pages
* Only set paper to Manual if not applying profile
* Update OCR view switching between pages with and without OCR output
* xz compress log file if xz available
* Fix bug applying paper after profile set SANE_INFO_INEXACT