@@ -3,6 +3,8 @@
 * Recognise "Document Table" as flatbed for imagescan backend.
 * Use option name as label for those options with no title.
 * Extended edit profile functionality in scan dialog to frontend options.
+* Close device when switching frontends so as not to block SANE for the new
+  frontend.
 
 
 2.5.6 (11.09.2019):
